--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ $RECYCLE.BIN/
 *.gba
 *.sav
 *.sgm
+*.ups #this one is annoying for merge conflicts, remove it if desired
 
 # =========================
 # Operating System Files
